--- a/src/components/app/colorizr-app/colorizr-app.html
+++ b/src/components/app/colorizr-app/colorizr-app.html
@@ -9,7 +9,7 @@
       }
     </style>
 
-    <colorizr-router auto></colorizr-router>
+    <colorizr-router id="router"></colorizr-router>
 
   </template>
   <script>
@@ -17,7 +17,10 @@
       'use strict';
 
       Polymer({
-        is: 'colorizr-app'
+        is: 'colorizr-app',
+        attached: function () {
+          this.$.router.start();
+        }
       });
     })();
   </script>
